# TTS-Bot

./: .env.example  .gitignore  .pdm-python  Dockerfile  pyproject.toml
src/: __main__.py  exception.py  tts.py
