[project]
name = "tts-bot"
version = "0.1.0"
description = "Default template for PDM package"
authors = [{ name = "AmazingAkai", email = "akai.is.amazing@gmail.com" }]
dependencies = []
requires-python = "==3.11.*"
readme = "README.md"
license = { text = "MIT" }


[tool.pdm]
distribution = false

[tool.pdm.scripts]
start = "python src"
